HelloParser.cpp
/*Author : Tsimofei Kinevich, group : 821703*/

// Generated from /home/tima/lang/HelloParser.g4 by ANTLR 4.9.1


#include "HelloParserVisitor.h"

#include "HelloParser.h"


/* parser postinclude section */
#ifndef _WIN32
#pragma GCC diagnostic ignored "-Wunused-parameter"
#endif


using namespace antlrcpp;
using namespace antlrcpptest;
using namespace antlr4;

HelloParser::HelloParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

HelloParser::~HelloParser() {
  delete _interpreter;
}

std::string HelloParser::getGrammarFileName() const {
  return "HelloParser.g4";
}

const std::vector<std::string>& HelloParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& HelloParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- MainContext ------------------------------------------------------------------

HelloParser::MainContext::MainContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<HelloParser::OperationContext *> HelloParser::MainContext::operation() {
  return getRuleContexts<HelloParser::OperationContext>();
}

HelloParser::OperationContext* HelloParser::MainContext::operation(size_t i) {
  return getRuleContext<HelloParser::OperationContext>(i);
}

std::vector<HelloParser::ExprContext *> HelloParser::MainContext::expr() {
  return getRuleContexts<HelloParser::ExprContext>();
}

HelloParser::ExprContext* HelloParser::MainContext::expr(size_t i) {
  return getRuleContext<HelloParser::ExprContext>(i);
}

std::vector<tree::TerminalNode *> HelloParser::MainContext::Newline() {
  return getTokens(HelloParser::Newline);
}

tree::TerminalNode* HelloParser::MainContext::Newline(size_t i) {
  return getToken(HelloParser::Newline, i);
}


size_t HelloParser::MainContext::getRuleIndex() const {
  return HelloParser::RuleMain;
}


antlrcpp::Any HelloParser::MainContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HelloParserVisitor*>(visitor))
    return parserVisitor->visitMain(this);
  else
    return visitor->visitChildren(this);
}

HelloParser::MainContext* HelloParser::main() {
  MainContext *_localctx = _tracker.createInstance<MainContext>(_ctx, getState());
  enterRule(_localctx, 0, HelloParser::RuleMain);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(35);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << HelloParser::Integer)
      | (1ULL << HelloParser::Float)
      | (1ULL << HelloParser::Long)
      | (1ULL << HelloParser::For)
      | (1ULL << HelloParser::IF)
      | (1ULL << HelloParser::ID))) != 0)) {
      setState(28);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case HelloParser::Integer:
        case HelloParser::Float:
        case HelloParser::Long:
        case HelloParser::ID: {
          setState(26);
          operation();
          break;
        }

        case HelloParser::For:
        case HelloParser::IF: {
          setState(27);
          expr();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(31);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == HelloParser::Newline) {
        setState(30);
        match(HelloParser::Newline);
      }
      setState(37);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SummContext ------------------------------------------------------------------

HelloParser::SummContext::SummContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> HelloParser::SummContext::ID() {
  return getTokens(HelloParser::ID);
}

tree::TerminalNode* HelloParser::SummContext::ID(size_t i) {
  return getToken(HelloParser::ID, i);
}

tree::TerminalNode* HelloParser::SummContext::Assign() {
  return getToken(HelloParser::Assign, 0);
}

tree::TerminalNode* HelloParser::SummContext::Plus() {
  return getToken(HelloParser::Plus, 0);
}

std::vector<tree::TerminalNode *> HelloParser::SummContext::INT() {
  return getTokens(HelloParser::INT);
}

tree::TerminalNode* HelloParser::SummContext::INT(size_t i) {
  return getToken(HelloParser::INT, i);
}

std::vector<tree::TerminalNode *> HelloParser::SummContext::FLT() {
  return getTokens(HelloParser::FLT);
}

tree::TerminalNode* HelloParser::SummContext::FLT(size_t i) {
  return getToken(HelloParser::FLT, i);
}

tree::TerminalNode* HelloParser::SummContext::PlusAss() {
  return getToken(HelloParser::PlusAss, 0);
}


size_t HelloParser::SummContext::getRuleIndex() const {
  return HelloParser::RuleSumm;
}


antlrcpp::Any HelloParser::SummContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HelloParserVisitor*>(visitor))
    return parserVisitor->visitSumm(this);
  else
    return visitor->visitChildren(this);
}

HelloParser::SummContext* HelloParser::summ() {
  SummContext *_localctx = _tracker.createInstance<SummContext>(_ctx, getState());
  enterRule(_localctx, 2, HelloParser::RuleSumm);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(46);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(38);
      match(HelloParser::ID);
      setState(39);
      match(HelloParser::Assign);
      setState(40);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << HelloParser::INT)
        | (1ULL << HelloParser::FLT)
        | (1ULL << HelloParser::ID))) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(41);
      match(HelloParser::Plus);
      setState(42);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << HelloParser::INT)
        | (1ULL << HelloParser::FLT)
        | (1ULL << HelloParser::ID))) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(43);
      match(HelloParser::ID);
      setState(44);
      match(HelloParser::PlusAss);
      setState(45);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << HelloParser::INT)
        | (1ULL << HelloParser::FLT)
        | (1ULL << HelloParser::ID))) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DiffContext ------------------------------------------------------------------

HelloParser::DiffContext::DiffContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> HelloParser::DiffContext::ID() {
  return getTokens(HelloParser::ID);
}

tree::TerminalNode* HelloParser::DiffContext::ID(size_t i) {
  return getToken(HelloParser::ID, i);
}

tree::TerminalNode* HelloParser::DiffContext::Assign() {
  return getToken(HelloParser::Assign, 0);
}

tree::TerminalNode* HelloParser::DiffContext::Minus() {
  return getToken(HelloParser::Minus, 0);
}

std::vector<tree::TerminalNode *> HelloParser::DiffContext::INT() {
  return getTokens(HelloParser::INT);
}

tree::TerminalNode* HelloParser::DiffContext::INT(size_t i) {
  return getToken(HelloParser::INT, i);
}

std::vector<tree::TerminalNode *> HelloParser::DiffContext::FLT() {
  return getTokens(HelloParser::FLT);
}

tree::TerminalNode* HelloParser::DiffContext::FLT(size_t i) {
  return getToken(HelloParser::FLT, i);
}

tree::TerminalNode* HelloParser::DiffContext::MinusAss() {
  return getToken(HelloParser::MinusAss, 0);
}


size_t HelloParser::DiffContext::getRuleIndex() const {
  return HelloParser::RuleDiff;
}


antlrcpp::Any HelloParser::DiffContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HelloParserVisitor*>(visitor))
    return parserVisitor->visitDiff(this);
  else
    return visitor->visitChildren(this);
}

HelloParser::DiffContext* HelloParser::diff() {
  DiffContext *_localctx = _tracker.createInstance<DiffContext>(_ctx, getState());
  enterRule(_localctx, 4, HelloParser::RuleDiff);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(56);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(48);
      match(HelloParser::ID);
      setState(49);
      match(HelloParser::Assign);
      setState(50);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << HelloParser::INT)
        | (1ULL << HelloParser::FLT)
        | (1ULL << HelloParser::ID))) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(51);
      match(HelloParser::Minus);
      setState(52);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << HelloParser::INT)
        | (1ULL << HelloParser::FLT)
        | (1ULL << HelloParser::ID))) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(53);
      match(HelloParser::ID);
      setState(54);
      match(HelloParser::MinusAss);
      setState(55);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << HelloParser::INT)
        | (1ULL << HelloParser::FLT)
        | (1ULL << HelloParser::ID))) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MultContext ------------------------------------------------------------------

HelloParser::MultContext::MultContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> HelloParser::MultContext::ID() {
  return getTokens(HelloParser::ID);
}

tree::TerminalNode* HelloParser::MultContext::ID(size_t i) {
  return getToken(HelloParser::ID, i);
}

tree::TerminalNode* HelloParser::MultContext::Assign() {
  return getToken(HelloParser::Assign, 0);
}

tree::TerminalNode* HelloParser::MultContext::Star() {
  return getToken(HelloParser::Star, 0);
}

std::vector<tree::TerminalNode *> HelloParser::MultContext::INT() {
  return getTokens(HelloParser::INT);
}

tree::TerminalNode* HelloParser::MultContext::INT(size_t i) {
  return getToken(HelloParser::INT, i);
}

std::vector<tree::TerminalNode *> HelloParser::MultContext::FLT() {
  return getTokens(HelloParser::FLT);
}

tree::TerminalNode* HelloParser::MultContext::FLT(size_t i) {
  return getToken(HelloParser::FLT, i);
}

tree::TerminalNode* HelloParser::MultContext::StarAss() {
  return getToken(HelloParser::StarAss, 0);
}


size_t HelloParser::MultContext::getRuleIndex() const {
  return HelloParser::RuleMult;
}


antlrcpp::Any HelloParser::MultContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HelloParserVisitor*>(visitor))
    return parserVisitor->visitMult(this);
  else
    return visitor->visitChildren(this);
}

HelloParser::MultContext* HelloParser::mult() {
  MultContext *_localctx = _tracker.createInstance<MultContext>(_ctx, getState());
  enterRule(_localctx, 6, HelloParser::RuleMult);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(66);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(58);
      match(HelloParser::ID);
      setState(59);
      match(HelloParser::Assign);
      setState(60);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << HelloParser::INT)
        | (1ULL << HelloParser::FLT)
        | (1ULL << HelloParser::ID))) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(61);
      match(HelloParser::Star);
      setState(62);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << HelloParser::INT)
        | (1ULL << HelloParser::FLT)
        | (1ULL << HelloParser::ID))) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(63);
      match(HelloParser::ID);
      setState(64);
      match(HelloParser::StarAss);
      setState(65);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << HelloParser::INT)
        | (1ULL << HelloParser::FLT)
        | (1ULL << HelloParser::ID))) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DivContext ------------------------------------------------------------------

HelloParser::DivContext::DivContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> HelloParser::DivContext::ID() {
  return getTokens(HelloParser::ID);
}

tree::TerminalNode* HelloParser::DivContext::ID(size_t i) {
  return getToken(HelloParser::ID, i);
}

tree::TerminalNode* HelloParser::DivContext::Assign() {
  return getToken(HelloParser::Assign, 0);
}

tree::TerminalNode* HelloParser::DivContext::Devide() {
  return getToken(HelloParser::Devide, 0);
}

std::vector<tree::TerminalNode *> HelloParser::DivContext::INT() {
  return getTokens(HelloParser::INT);
}

tree::TerminalNode* HelloParser::DivContext::INT(size_t i) {
  return getToken(HelloParser::INT, i);
}

std::vector<tree::TerminalNode *> HelloParser::DivContext::FLT() {
  return getTokens(HelloParser::FLT);
}

tree::TerminalNode* HelloParser::DivContext::FLT(size_t i) {
  return getToken(HelloParser::FLT, i);
}

tree::TerminalNode* HelloParser::DivContext::DevideAss() {
  return getToken(HelloParser::DevideAss, 0);
}


size_t HelloParser::DivContext::getRuleIndex() const {
  return HelloParser::RuleDiv;
}


antlrcpp::Any HelloParser::DivContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HelloParserVisitor*>(visitor))
    return parserVisitor->visitDiv(this);
  else
    return visitor->visitChildren(this);
}

HelloParser::DivContext* HelloParser::div() {
  DivContext *_localctx = _tracker.createInstance<DivContext>(_ctx, getState());
  enterRule(_localctx, 8, HelloParser::RuleDiv);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(76);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(68);
      match(HelloParser::ID);
      setState(69);
      match(HelloParser::Assign);
      setState(70);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << HelloParser::INT)
        | (1ULL << HelloParser::FLT)
        | (1ULL << HelloParser::ID))) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(71);
      match(HelloParser::Devide);
      setState(72);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << HelloParser::INT)
        | (1ULL << HelloParser::FLT)
        | (1ULL << HelloParser::ID))) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(73);
      match(HelloParser::ID);
      setState(74);
      match(HelloParser::DevideAss);
      setState(75);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << HelloParser::INT)
        | (1ULL << HelloParser::FLT)
        | (1ULL << HelloParser::ID))) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InPowContext ------------------------------------------------------------------

HelloParser::InPowContext::InPowContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> HelloParser::InPowContext::ID() {
  return getTokens(HelloParser::ID);
}

tree::TerminalNode* HelloParser::InPowContext::ID(size_t i) {
  return getToken(HelloParser::ID, i);
}

tree::TerminalNode* HelloParser::InPowContext::Assign() {
  return getToken(HelloParser::Assign, 0);
}

tree::TerminalNode* HelloParser::InPowContext::Pow() {
  return getToken(HelloParser::Pow, 0);
}

std::vector<tree::TerminalNode *> HelloParser::InPowContext::INT() {
  return getTokens(HelloParser::INT);
}

tree::TerminalNode* HelloParser::InPowContext::INT(size_t i) {
  return getToken(HelloParser::INT, i);
}

std::vector<tree::TerminalNode *> HelloParser::InPowContext::FLT() {
  return getTokens(HelloParser::FLT);
}

tree::TerminalNode* HelloParser::InPowContext::FLT(size_t i) {
  return getToken(HelloParser::FLT, i);
}

tree::TerminalNode* HelloParser::InPowContext::PowAss() {
  return getToken(HelloParser::PowAss, 0);
}


size_t HelloParser::InPowContext::getRuleIndex() const {
  return HelloParser::RuleInPow;
}


antlrcpp::Any HelloParser::InPowContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HelloParserVisitor*>(visitor))
    return parserVisitor->visitInPow(this);
  else
    return visitor->visitChildren(this);
}

HelloParser::InPowContext* HelloParser::inPow() {
  InPowContext *_localctx = _tracker.createInstance<InPowContext>(_ctx, getState());
  enterRule(_localctx, 10, HelloParser::RuleInPow);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(86);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(78);
      match(HelloParser::ID);
      setState(79);
      match(HelloParser::Assign);
      setState(80);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << HelloParser::INT)
        | (1ULL << HelloParser::FLT)
        | (1ULL << HelloParser::ID))) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(81);
      match(HelloParser::Pow);
      setState(82);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << HelloParser::INT)
        | (1ULL << HelloParser::FLT)
        | (1ULL << HelloParser::ID))) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(83);
      match(HelloParser::ID);
      setState(84);
      match(HelloParser::PowAss);
      setState(85);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << HelloParser::INT)
        | (1ULL << HelloParser::FLT)
        | (1ULL << HelloParser::ID))) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InSqrtContext ------------------------------------------------------------------

HelloParser::InSqrtContext::InSqrtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> HelloParser::InSqrtContext::ID() {
  return getTokens(HelloParser::ID);
}

tree::TerminalNode* HelloParser::InSqrtContext::ID(size_t i) {
  return getToken(HelloParser::ID, i);
}

tree::TerminalNode* HelloParser::InSqrtContext::Assign() {
  return getToken(HelloParser::Assign, 0);
}

tree::TerminalNode* HelloParser::InSqrtContext::Sqrt() {
  return getToken(HelloParser::Sqrt, 0);
}

tree::TerminalNode* HelloParser::InSqrtContext::INT() {
  return getToken(HelloParser::INT, 0);
}

tree::TerminalNode* HelloParser::InSqrtContext::FLT() {
  return getToken(HelloParser::FLT, 0);
}


size_t HelloParser::InSqrtContext::getRuleIndex() const {
  return HelloParser::RuleInSqrt;
}


antlrcpp::Any HelloParser::InSqrtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HelloParserVisitor*>(visitor))
    return parserVisitor->visitInSqrt(this);
  else
    return visitor->visitChildren(this);
}

HelloParser::InSqrtContext* HelloParser::inSqrt() {
  InSqrtContext *_localctx = _tracker.createInstance<InSqrtContext>(_ctx, getState());
  enterRule(_localctx, 12, HelloParser::RuleInSqrt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    match(HelloParser::ID);
    setState(89);
    match(HelloParser::Assign);
    setState(90);
    match(HelloParser::Sqrt);
    setState(91);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << HelloParser::INT)
      | (1ULL << HelloParser::FLT)
      | (1ULL << HelloParser::ID))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OperationContext ------------------------------------------------------------------

HelloParser::OperationContext::OperationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HelloParser::SummContext* HelloParser::OperationContext::summ() {
  return getRuleContext<HelloParser::SummContext>(0);
}

HelloParser::DiffContext* HelloParser::OperationContext::diff() {
  return getRuleContext<HelloParser::DiffContext>(0);
}

HelloParser::MultContext* HelloParser::OperationContext::mult() {
  return getRuleContext<HelloParser::MultContext>(0);
}

HelloParser::DivContext* HelloParser::OperationContext::div() {
  return getRuleContext<HelloParser::DivContext>(0);
}

HelloParser::CreateContext* HelloParser::OperationContext::create() {
  return getRuleContext<HelloParser::CreateContext>(0);
}

HelloParser::AssContext* HelloParser::OperationContext::ass() {
  return getRuleContext<HelloParser::AssContext>(0);
}

HelloParser::InPowContext* HelloParser::OperationContext::inPow() {
  return getRuleContext<HelloParser::InPowContext>(0);
}

HelloParser::InSqrtContext* HelloParser::OperationContext::inSqrt() {
  return getRuleContext<HelloParser::InSqrtContext>(0);
}


size_t HelloParser::OperationContext::getRuleIndex() const {
  return HelloParser::RuleOperation;
}


antlrcpp::Any HelloParser::OperationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HelloParserVisitor*>(visitor))
    return parserVisitor->visitOperation(this);
  else
    return visitor->visitChildren(this);
}

HelloParser::OperationContext* HelloParser::operation() {
  OperationContext *_localctx = _tracker.createInstance<OperationContext>(_ctx, getState());
  enterRule(_localctx, 14, HelloParser::RuleOperation);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(101);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(93);
      summ();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(94);
      diff();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(95);
      mult();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(96);
      div();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(97);
      create();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(98);
      ass();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(99);
      inPow();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(100);
      inSqrt();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CreateContext ------------------------------------------------------------------

HelloParser::CreateContext::CreateContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HelloParser::CreateContext::ID() {
  return getToken(HelloParser::ID, 0);
}

tree::TerminalNode* HelloParser::CreateContext::Assign() {
  return getToken(HelloParser::Assign, 0);
}

tree::TerminalNode* HelloParser::CreateContext::Integer() {
  return getToken(HelloParser::Integer, 0);
}

tree::TerminalNode* HelloParser::CreateContext::Float() {
  return getToken(HelloParser::Float, 0);
}

tree::TerminalNode* HelloParser::CreateContext::Long() {
  return getToken(HelloParser::Long, 0);
}

tree::TerminalNode* HelloParser::CreateContext::INT() {
  return getToken(HelloParser::INT, 0);
}

tree::TerminalNode* HelloParser::CreateContext::FLT() {
  return getToken(HelloParser::FLT, 0);
}


size_t HelloParser::CreateContext::getRuleIndex() const {
  return HelloParser::RuleCreate;
}


antlrcpp::Any HelloParser::CreateContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HelloParserVisitor*>(visitor))
    return parserVisitor->visitCreate(this);
  else
    return visitor->visitChildren(this);
}

HelloParser::CreateContext* HelloParser::create() {
  CreateContext *_localctx = _tracker.createInstance<CreateContext>(_ctx, getState());
  enterRule(_localctx, 16, HelloParser::RuleCreate);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(103);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << HelloParser::Integer)
      | (1ULL << HelloParser::Float)
      | (1ULL << HelloParser::Long))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(104);
    match(HelloParser::ID);
    setState(105);
    match(HelloParser::Assign);
    setState(106);
    _la = _input->LA(1);
    if (!(_la == HelloParser::INT
